...
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:textSize="30dp"
        android:textStyle="bold"
        android:fontFamily="@font/dmsans"
        android:text="Log In" />
    <TextView
        android:id="@+id/idtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="left"
...

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        style="@style/LoginTextInputLayoutStyle"
        app:boxBackgroundColor="#f9f9f9"
        android:id="@+id/uscid"
        android:theme="@style/LoginTextInputLayoutStyle"


        >

        <com.google.android.material.textfield.TextInputEditText
...
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:theme="@style/LoginTextInputLayoutStyle"
        style="@style/LoginTextInputLayoutStyle"
        app:boxBackgroundColor="#f9f9f9"
        android:id="@+id/password"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:fontFamily="@font/dmsans"
            android:layout_gravity="center_horizontal"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/errorText"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#990000"
        android:textStyle="bold"
        android:fontFamily="@font/dmsans"
        android:visibility="invisible"
        android:text="No account found for the ID and password provided. Please retype your username and password or sign up." />

    <Button
        android:id="@+id/buttonLogIn"
        style="@style/Button.Purple"
        android:layout_width="267dp"
        android:layout_height="48dp"
        android:backgroundTint="#8A00C2"
        android:text="Log In"
        android:textStyle="bold"
...
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <ImageView
            android:id="@+id/nav1"
            android:layout_width="205dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/navbar1"
            android:onClick="toMapScreen"/>

        <ImageView
            android:id="@+id/nav2"
            android:layout_width="205dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/navbarprof2"
            android:onClick="toProfileScreen"/>
    </LinearLayout>

...
