...
        android:layout_width="350dp"
        android:layout_height="225dp"
        app:cornerRadius = "15dp"
        app:srcCompat="@drawable/uscid"
        />
        <TextView
            android:id="@+id/studentname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textSize="18sp"
            android:layout_marginTop="110dp"
            android:layout_marginLeft="105dp"
...
            android:text="AAYUSHI AGRAWAL" />
        <LinearLayout
            android:layout_marginTop="140dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/studentid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginLeft="105dp"
                android:text="3162222359" />
            <TextView
                android:id="@+id/studentaffil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginLeft="7dp"
...
