...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/gridLayout01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:columnCount="6"
                app:rowCount="25"

...
